# hs-web-helper

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
helper/: __init__.py  database.py  dependencies.py  settings.py
helper/cards/: __init__.py  api.py  crud.py  models.py  schemas.py
helper/main/: api.py  application.py
