[tool.poetry]
name = "hs-web-helper"
version = "0.1.0"
description = ""
authors = ["Pompeiro <pompeiro10@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-few-public-methods"
]
extension-pkg-whitelist = ["pydantic"]
good-names="db"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_explicit = true
no_implicit_optional = true
ignore_missing_imports = true